fixed alignment and added hover tricks

--- a/app/styles/middle-section.scss
+++ b/app/styles/middle-section.scss
@@ -114,12 +114,18 @@ h2 {
   color: $c-white;
 }
 
+
 .text {
   display: inline-table;
   align-self: center;
   margin: 0;
   padding: 0 1rem;
   color: $c-white;
+
+  &:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+  }
 }
 
 .fa-share-square-o {
