--- a/app/styles/top-section.scss
+++ b/app/styles/top-section.scss
@@ -22,13 +22,14 @@
   display: flex;
   align-items: center;
   // transform: translateX(-5rem);
+  margin: 0;
 }
 
 .navbar-logo {
-
   width: 4.5rem;
   height: 4.5rem;
-  margin: 0.5rem;
+  // margin: 0.5rem;
+  color: $c-white;
 }
 
 .navbar-title {
@@ -45,8 +46,13 @@
 
 .navbar-right-item {
   margin: 0.5rem;
-  text-decoration: none;
+  transition: 0.6s ease-out;
   color: $c-white;
+  text-decoration: none;
+
+  &:hover {
+    transform: translateY(-8px);
+  }
 }
 
 .search-icon {
